Bindings/NIFToolset.Managed/NativeMethods.cs


    #region NIF.Native.Mesh.h
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_Mesh_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeMeshHandle NIF_Mesh_Create();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Mesh_GetName(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_SetName(SafeMeshHandle mesh, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Mesh_GetVertexCount(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Mesh_GetPrimitiveCount(SafeMeshHandle mesh, uint submeshIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Mesh_GetTotalPrimitiveCount(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Mesh_GetSubmeshCount(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_SetSubmeshCount(SafeMeshHandle mesh, uint submeshCount);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Mesh_GetStreamRefCount(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamRefHandle NIF_Mesh_GetStreamRefAt(SafeMeshHandle mesh, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamRefHandle NIF_Mesh_FindStreamRef(SafeMeshHandle mesh, [MarshalAs(UnmanagedType.LPUTF8Str)] string? semantic, uint semanticIndex, int format);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamRefHandle NIF_Mesh_GetFirstStreamRefByUsage(SafeMeshHandle mesh, int usage, uint accessMask);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamRefHandle NIF_Mesh_AddStream(SafeMeshHandle mesh, [MarshalAs(UnmanagedType.LPUTF8Str)] string? semantic, uint semanticIndex, int format, uint count, uint accessMask, int usage, nint sourceData, int forceToolDataStream, int createDefaultRegion);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamRefHandle NIF_Mesh_AddStreamRef(SafeMeshHandle mesh, SafeDataStreamHandle dataStream, [MarshalAs(UnmanagedType.LPUTF8Str)] string? semantic, uint semanticIndex, int perInstance);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_RemoveStreamRef(SafeMeshHandle mesh, SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_RemoveAllStreamRefs(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Mesh_GetPrimitiveType(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_SetPrimitiveType(SafeMeshHandle mesh, int primitiveType);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Mesh_GetPrimitiveTypeString(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern NifBound NIF_Mesh_GetModelBound(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_SetModelBound(SafeMeshHandle mesh, NifBound bound);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Mesh_RecomputeBounds(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Mesh_GetModifierCount(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_Mesh_GetModifierAt(SafeMeshHandle mesh, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Mesh_RemoveModifierAt(SafeMeshHandle mesh, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Mesh_AttachAllModifiers(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Mesh_DetachAllModifiers(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Mesh_ResetModifiers(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAVObjectHandle NIF_Mesh_AsAVObject(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_Mesh_AsObject(SafeMeshHandle mesh);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_DataStream_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_DataStream_AsObject(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamHandle NIF_DataStream_CreateSingleElement(int format, uint count, uint accessMask, int usage, nint sourceData, int createRegion0, int forceToolDataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetStride(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetSize(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetTotalCount(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetCount(SafeDataStreamHandle dataStream, uint regionIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetAccessMask(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStream_GetUsage(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetRegionCount(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern NifDataStreamRegion NIF_DataStream_GetRegion(SafeDataStreamHandle dataStream, uint regionIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStream_SetRegion(SafeDataStreamHandle dataStream, uint regionIndex, NifDataStreamRegion region);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_AddRegion(SafeDataStreamHandle dataStream, NifDataStreamRegion region);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStream_RemoveRegion(SafeDataStreamHandle dataStream, uint regionIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStream_RemoveAllRegions(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStream_GetElementDescCount(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStream_GetElementDesc(SafeDataStreamHandle dataStream, uint index, NifDataStreamElementDesc* outElementDesc);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStream_GetStreamable(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStream_SetStreamable(SafeDataStreamHandle dataStream, int streamable);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStream_GetLocked(SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_DataStream_Lock(SafeDataStreamHandle dataStream, uint lockMask);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_DataStream_LockRegion(SafeDataStreamHandle dataStream, uint regionIndex, uint lockMask);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStream_Unlock(SafeDataStreamHandle dataStream, uint lockMask);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_DataStreamRef_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeDataStreamHandle NIF_DataStreamRef_GetDataStream(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_DataStreamRef_SetDataStream(SafeDataStreamRefHandle streamRef, SafeDataStreamHandle dataStream);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetStride(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetSize(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetTotalCount(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetCount(SafeDataStreamRefHandle streamRef, uint submeshIndex);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_DataStreamRef_GetAccessMask(SafeDataStreamRefHandle streamRef);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_DataStreamRef_GetUsage(SafeDataStreamRefHandle streamRef);
